--- a/index.html
+++ b/index.html
@@ -27,21 +27,22 @@
 
 <body>
 
-        <nav class="navbar navbar-default">
-                <div class="container">
-                  <div class="navbar-header">
-                    <a class="navbar-brand" href="#">CNRS, LLC</a>
-                  </div>
-                  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right">
-                      <li><a href="#">Add New Train</a></li>
-                      <!-- <li><a href="#">Portfolio</a></li> -->
-                    </ul>
-                  </div>
-                </div>
-              </nav>
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">CNRS, LLC</a>
+            </div>
+            <div class="collapse navbar-collapse" id="add-train-btn">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="add-train.html">Add New Train</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-    <!-- Employee Tracker -->
+    <!--Train Tracker -->
     <div class="container">
 
         <!-- Jumbotron -->
@@ -54,7 +55,7 @@
 
             <div class="col-lg-12">
 
-                <!-- Current Employees-->
+                <!-- Current Trains-->
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         <h3 class="panel-title">
@@ -62,7 +63,7 @@
                         </h3>
                     </div>
                     <div class="panel-body">
-                        <table class="table table-hover" id='employee-table'>
+                        <table class="table table-hover" id='train-table'>
                             <thead>
                                 <tr>
                                     <th>Train Name</th>
@@ -88,7 +89,6 @@
 
     <!-- JavaScript -->
     <script src="assets/js/firebase/firebase.js"></script>
-    <!-- <script src="api.js"></script> -->
     <script src="assets/js/app/app.js"></script>
 
 </body>
